# homelab

./: README.md  kustomization.yaml
apps/: kustomization.yaml
apps/bear-aware/: pyproject.toml
apps/bear-aware/k8s/: deployment.yaml  kustomization.yaml
apps/bear-aware/src/: config.py  file_watcher.py  image_analyzer.py  main.py  video_processor.py
apps/bear-aware/tests/: conftest.py  test_key_frames.py
apps/bear-aware/tests/files/: bear.mov
apps/home/: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
apps/home-assistant/: configmap.yaml  configuration.yaml  deployment.yaml  ingress.yaml  ingressroute.yaml  kustomization.yaml  middleware.yaml  namespace.yaml  pvc.yaml  service.yaml  traefik-crds.yaml
apps/home/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
apps/home/src/: config.py  file_watcher.py  image_analyzer.py  main.py  main.rs  video_processor.py
apps/home/tests/: conftest.py  test_key_frames.py  test_opencv.py
apps/infra/: kustomization.yaml  namespace.yaml
apps/infra/cert-manager/: crds.yaml  deployment.yaml  kustomization.yaml
apps/infra/cert-manager-issuers/: kustomization.yaml  letsencrypt-clusterissuer.yaml
apps/infra/traefik/: kustomization.yaml  tls-store.yaml  traefik-config.yaml
apps/jellyfin/: deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml
apps/node-red/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  settings.js
apps/tailscale/: README.md  deployment.yaml  kustomization.yaml  rbac.yaml
apps/tailscale/base/: deployment.yaml  namespace.yaml  rbac.yaml
docs/: certificates.md
